bigsdb.css
body,form,input,th,td,div {margin-top:0;margin-bottom:0;padding-bottom:0;padding-top:0}
p {margin:0 0 1em 0;padding:0}

body {
	font:0.9em/110% Arial,Helvetica,sans-serif;
	background:#fff;
	color:#000;
	margin-left:3px;
	margin-right:3px;
}

h1 {
	font: italic 600 1.5em/110% Arial,Helvetica,sans-serif;
	text-align: left;
	line-height: 110%;
	color: #606080;
	border-top: solid #a0a0d0 3px;
	border-bottom: dotted #8080b0 1px;
	background: #f0f0f0;
}

h2 {
	font: 600 1.2em Arial,Helvetica,sans-serif; 
	color: #606060;
	border-bottom: dotted #8080b0 1px;
}

h3 {
	font: 600 1.1em Arial,Helvetica,sans-serif;
	color: #000080;
	border-bottom: dotted #8080b0 1px	
} 
h4,h5,h6 {font: 1em Arial,Helvetica,sans-serif}
ul {list-style:disc}
table {
	font-size: 1em;
	border-spacing:1px
}

a {
	color:#00b;
	text-decoration:none;
}

a.hideshow,a.showhide {
	cursor:pointer;	
}

a:hover {
	color:#000;
	text-decoration:underline
}

th {background:#404090}
th,a.th {color:#fff}

a.th:hover {
	color:#bbf;
	text-decoration:none
}

textarea {width: 98%}
select {font-size: 1em}
select.filter{max-width:20em}
select.fieldlist{max-width:12em}
.value_entry{min-width:12em}
.allele_entry{min-width:10em}
.int_entry{width:5em}
input {font-size: 1em}

a.downloadbutton {
	font-size: 0.9em;
	background: #00ff00;
	border: 1px solid black;
	padding: 0 0.5em;
}

a.downloadbutton:hover {	
	background:#fa3030
}

#tooltip,#toggle_tooltips,a.tooltip,a.update_tooltip,a.pending_tooltip {
	background:#fafad2;
	color:black;
	opacity:0.9
}

a.sequence_tooltip {
	background:#d2fad2;
	color:black	
}

a.sequence_tooltip_incomplete {
	background:#fad200;
	color:black	
}

#tooltip {
	position:absolute;
	font-size:0.75em;
	z-index:3000;
	padding:5px;
	width:20em
}

#tooltip,a.tooltip {border:1px solid black}
#tooltip div,#tooltip h3 {margin:0}
a.tooltip,a.info_tooltip {font:600 0.7em serif}

a.seqflag_tooltip {
	cursor:default;
	text-decoration:none	
}

a.tooltip,a.update_tooltip,a.pending_tooltip,a.existing_tooltip,a.clashing_tooltip {
	cursor:help;
	text-decoration:none
}

a.sequence_tooltip,a.sequence_tooltip_incomplete,a.extract_tooltip,a.info_tooltip,a.cds {
	cursor:pointer;
	text-decoration:none;	
}

a#toggle_tooltips {
	cursor:pointer;
	text-decoration:none;
	border:1px solid #c0c0c0;
	font: 300 1em serif;
}

a.update_tooltip,a.pending_tooltip,a.sequence_tooltip,a.sequence_tooltip_incomplete {
	border:1px solid #c0c0c0;
	font-size:0.7em
}

a.existing_tooltip {
	background:#d2fad2;
	color:black;
	border:1px solid #c0c0c0;	
	font-size:0.7em	
}

a.extract_tooltip {
	background:#d2fafa;
	color:black;
	border:1px solid #c0c0c0;	
	font-size:0.7em	
}

a.info_tooltip {
	background:#d2fafa;
	color:black;
	border:1px solid #c0c0c0;	
	font-size:0.7em	
}

a.seqflag_tooltip {
	background:#fad2d2;
	color:black;
	border:1px solid #c0c0c0;	
	font-size:0.7em		
}

a.clashing_tooltip {
	background:#fad2d2;
	color:black;
	border:1px solid #c0c0c0;	
	font-size:0.7em	
}

a.cds {
	background:#d2fad2;
	color:black;
	border:1px solid #c0c0c0;	
	font-size:0.7em	
}

a.update {
	color:black;
	border:1px solid #c0c0c0;	
	font-size:0.7em;
	text-decoration:none;
	background:#e0d5d5;
}

a.truncated {
	text-decoration:none;
	color:black;
}

.provisional {	
	border:1px solid #c0c0c0;
	background:#e0b5b5;
	color:black
}

.seq {font-family:Courier New,monospace}
.flanking {color:#ccc}
.coding {background:#ccf}
.startcodon {background:#cfc}
.stopcodon {background:#fcc}
.code {font-family:Courier New,monospace}
.highlight {color:#f00}
.non-default {color:#00f}
.comment {font-size: 0.9em}
.warning {background:#fcc}

.chartbar {
	background:#707090;
	color:#c7e0e0;
	padding:3px
}

.chartbar,.chart {border:1px solid #000}

.chart {
	font-size:0.8em;
	text-align:Center;
	padding:0;
	margin:0;
	width:95%
}

input.submit:hover {
	background:#fff;
	color:black;
	border:2px solid;
	border-top-color:#9b9;
	border-left-color:#9b9;
	border-right-color:#696;
	border-bottom-color:#696
}

.fieldsection {
	width:90%;
	margin:0px;
}

.button,.smallbutton, .fieldvaluebutton {
	background:#f0f0f0;
	color:#333;
	border-top-color:#669;
	border-left-color:#669;
	border-right-color:#336;
	border-bottom-color:#336
}

.button {
	border:2px solid;
	margin:5px
}

.smallbutton {
	border:1px solid;
	font-size:0.8em;
    margin:1px;
}

.rightbutton {
	margin:-20px 5px 10px 0;
	float:right;
}

.legendbutton {
	margin:-17px 5px 10px 0;
	float:right;
}

.button:hover,.smallbutton:hover,.fieldvaluebutton:hover {
	background:#fff;
	color:black;
	text-decoration:none;
	border-top-color:#99b;
	border-left-color:#99b;
	border-right-color:#669;
	border-bottom-color:#669
}

input.submit {
	background:#eee;
	margin:2px;
	padding: 0 5px 0 5px;
	color:#333;
	border:2px solid;
	border-top-color:#696;
	border-left-color:#696;
	border-right-color:#363;
	border-bottom-color:#363;
}

input.fieldvaluebutton {

	margin:1px;
	padding-left:2px;
	padding-right:2px;
	border:1px solid;

}

input.pagebar {
	font:84% arial,helvetica,sans-serif;
	background:#efefff;
	margin:1px;
	border:1px solid;
	border-top-color:#696;
	border-left-color:#696;
	border-right-color:#363;
	border-bottom-color:#363
}

a.resetbutton, input.reset{
	background:#eee;
	margin:2px;
	padding: 0 10px 0 10px;
	color:#333;
	border:2px solid;
	border-top-color:#669;
	border-left-color:#669;
	border-right-color:#336;
	border-bottom-color:#336;
	display:block;
	float:left
}

a.resetbutton:hover, input.reset:hover {
	background:#fff;
	color:black;
	text-decoration:none;
	border:2px solid;
	border-top-color:#99b;
	border-left-color:#99b;
	border-right-color:#669;
	border-bottom-color:#669
}

input.pagebar:hover {
	border:1px solid #f00
}

.td1 {background:#efefff}
.td2 {background:#efefef}
table.tablesorter {text-align:center}
table.tablesorter tr.even td {background:#efefff;text-align:center}
table.tablesorter tr.odd td {background:#efefef;text-align:center}
/* ... */

